--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,11 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-speech-recognition": "^3.10.0",
+    "react-use-clipboard": "^1.0.9",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
