--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^10.0.4",
     "react-use-clipboard": "^1.0.9",
     "regenerator-runtime": "^0.14.1"
   },
